Docker-compos: Legger til healthcheck + forskjellig ressursbruk lokalt vs pipeline (#786)