@@ -17,20 +17,21 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <vtp.versjon>1.1.6</vtp.versjon>
-        <dokumentgenerator.version>3.3.1</dokumentgenerator.version>
-        <felles.versjon>4.1.25</felles.versjon>
+        <dokumentgenerator.version>3.3.2</dokumentgenerator.version>
+        <felles.versjon>4.1.30</felles.versjon>
         <fp-kontrakter.version>6.1.21</fp-kontrakter.version>
-        <selvbetjening-felles.version>0.8.5</selvbetjening-felles.version>
+        <selvbetjening-felles.version>0.8.13</selvbetjening-felles.version>
 
-        <allure.version>2.18.0</allure.version>
-        <assertj.version>3.22.0</assertj.version>
+        <allure.version>2.18.1</allure.version>
+        <allure.maven.version>2.11.2</allure.maven.version>
+        <assertj.version>3.23.1</assertj.version>
         <aspectj.version>1.9.9.1</aspectj.version>
         <apache-commons.version>3.12.0</apache-commons.version>
         <jackson.version>2.13.3</jackson.version>
         <jboss-jandex.version>2.4.2.Final</jboss-jandex.version>
-        <jersey.version>3.0.4</jersey.version>
+        <jersey.version>3.0.5</jersey.version>
         <junit.version>5.8.2</junit.version>
-        <mockito.version>4.5.1</mockito.version>
+        <mockito.version>4.6.1</mockito.version>
     </properties>
 
     <dependencies>
@@ -44,6 +45,11 @@
             <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
             <artifactId>foreldrepengesoknad</artifactId>
             <version>${dokumentgenerator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>no.nav.foreldrepenger.felles</groupId>
+            <artifactId>felles-mapper</artifactId>
+            <version>${felles.versjon}</version>
         </dependency>
         <dependency>
             <groupId>no.nav.foreldrepenger.felles</groupId>
@@ -127,7 +133,7 @@
         <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
-            <version>2.1.0</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
             <groupId>jakarta.activation</groupId>
@@ -186,10 +192,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M6</version>
+                <version>3.0.0-M7</version>
                 <configuration>
                     <argLine>
-                        --enable-preview
                         -Dfile.encoding=UTF-8
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
@@ -218,7 +223,7 @@
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.11.2</version>
+                <version>${allure.maven.version}</version>
                 <configuration>
                     <reportDirectory>target/allure-report</reportDirectory>
                     <reportingOutputDirectory>target/allure-report</reportingOutputDirectory>
@@ -239,22 +244,8 @@
                     <encoding>UTF-8</encoding>
                     <compilerArgs>
                         <arg>-parameters</arg>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok-maven-plugin</artifactId>
-                <version>1.18.20.0</version>
-                <executions>
-                    <execution>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>delombok</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
